stylesheets/styles.css
body {
    background-color: lightgrey !important;
}

#home, #about-us, #members, #contact-us {
    padding: 4em 0;
}

.navbar {
    background-color:rgba(255, 255, 255, 0.4);
    padding: 0 !important;
    z-index: 2 !important;
}

.navbar-brand {
    padding: 0 !important;
}

.nav-logo {
    height: 5rem;
    width: 5rem;
}

.background-image {
    background: url('../assets/Earth.png') no-repeat center center fixed;
    background-size: cover;
    width: 100%;
    overflow: hidden;
    position: sticky;
    display: flex;
    justify-content: center;
    align-items: center;
}

.overlay {
    position:absolute;
    top:0;
    left:0;
    right:0%;
    bottom: 0%;
    background-color:rgba(255, 255, 255, 0.4);
}

.centered {
    position: absolute;
    max-width: 45%;
    max-height: 45%;
    top: 50%;
    left: 50%;
    overflow: visible;
}

.CRFC-logo {
    position: relative;
    max-width: 100%;
    max-height: 100%;
    margin-top: -50%;
    margin-left: -50%;
}

.grid-container {
    flex-wrap: wrap;
}

.grid-item {
    display: flex;
    flex-basis: 25%;
    justify-content: center;
    align-items: center;
}

img {
    max-width: 100%;
    height: auto;
}

.resource-links {
    margin: 0 auto;
}

.hidden {
    opacity: 0;
    filter: blur(5px);
    transform: translateX(-100%);
    transition: all 1s;
}

.show {
    opacity: 1;
    filter: blur(0);
    transform: translate(0);
    margin: 0 1em;
}

.logo:nth-child(2){
    transition-delay: 400ms;
}
.logo:nth-child(3){
    transition-delay: 500ms;
}

/* Begin Media Queries*/

@media screen and (min-width: 767px) {
    .justify-lg {
        justify-content: space-evenly;
    }
    form {
        max-width: 32rem;
        margin: 0 auto;
    }
    #about-us, #members {
        display: flex;
        flex-direction: column;
        justify-content: center;
        
    }
}

@media(prefers-reduced-motion){
    .hidden {
        transition: none;
    }
}

